# csad25KI409MaksymSmal18

./: CMakeLists.txt  README.md  ci.bat  ci.sh  math_operations.cpp  math_operations.h
tests/: unit_tests.cpp
